tests/array-exprs-err.chg.stderr
type error: str* is not assignable to {{integer}}

    let x = [1, "a"];
                ^^^
